fix redux effects

--- a/src/ExampleAppSub.module.css
+++ b/src/ExampleAppSub.module.css
@@ -1,7 +1,7 @@
 
 .container {
-  color: rgb(107, 133, 100);
-  background-color: burlywood;
+  color: rgb(30, 9, 122);
+  background-color: rgb(159, 182, 153);
 }
 
 .linkList {
