--- a/src/ExampleAppSub.module.css
+++ b/src/ExampleAppSub.module.css
@@ -2,6 +2,8 @@
 .container {
   color: rgb(30, 9, 122);
   background-color: rgb(159, 182, 153);
+  padding: 0.25em;
+  position: relative;
 }
 
 .linkList {
