use nesting css

--- a/src/lazyComponent/LazyInfo.module.pcss
+++ b/src/lazyComponent/LazyInfo.module.pcss
@@ -2,4 +2,9 @@
 .container {
   background-color: rgb(158, 131, 131);
   padding: 0.25rem;
+
+
+  &:hover {
+    background-color: rgb(75, 125, 138);
+  }
 }
