--- a/src/counter/Counter.module.css
+++ b/src/counter/Counter.module.css
@@ -2,5 +2,9 @@
 .btn {
   background: rgb(228, 219, 219);
   border-radius: 0.25rem;
-  margin: 0 0.25rem;
+  margin: 0.1rem 0.25rem;
+}
+
+.hidden {
+  display: none;
 }
